# gpddatabase

./: .gitignore  .pylintrc  main.py  pyproject.toml
.github/workflows/: development-checks.yml  jekyll-gh-pages.yml  pylint.yml  python-publish.yml
cpp/: CMakeLists.txt
cpp/include/: DataObject.h  DataObjectCorrelation.h  DataObjectData.h  DataObjectDataPoint.h  DataObjectDataSet.h  DataObjectGeneralInfo.h  DataObjectKinematicBin.h  DataObjectReplicaSet.h  DataObjectUUID.h  DataObjectUncertainty.h  DataObjectUncertaintySet.h  ExclusiveDatabase.h  PythonObject.h  Utility.h
cpp/include/gpddatabase/: DataObject.h  DataObjectDataPoint.h  DataObjectDataSet.h  DataObjectUUID.h  DataObjectUncertainty.h  DataObjectUncertaintySet.h  ExclusiveDatabase.h  Utility.h
cpp/src/: DataObject.cpp  DataObjectCorrelation.cpp  DataObjectData.cpp  DataObjectDataPoint.cpp  DataObjectDataSet.cpp  DataObjectGeneralInfo.cpp  DataObjectKinematicBin.cpp  DataObjectReplicaSet.cpp  DataObjectUUID.cpp  DataObjectUncertainty.cpp  DataObjectUncertaintySet.cpp  ExclusiveDatabase.cpp  PythonObject.cpp  Utility.cpp
docs/: Gemfile  _config.yml  acknowledgements.markdown  basic_usage.markdown  contact.markdown  data_format.markdown  data_sets.markdown  file_9j7gof4d.markdown  file_9jggof4d.markdown  index.markdown  installation.markdown  lic.markdown  new_data.markdown  usage.markdown
docs/_layouts/: default.html
example/: create_markdown_pages.py  main.cpp  main.py
example/cpp/: CMakeLists.txt
example/cpp/cmake/modules/: FindGPDDatabase.cmake
example/cpp/src/: main.cpp
gpddatabase/: DataObjectGeneralInfo.py  Exceptions.py  ExclusiveDatabase.py  MarkdownExclusiveDatabase.py  ParticleTypes.py  __init__.py
gpddatabase/beans/: DataTypes.py  GenericTypes.py  ObservableTypes.py  ParticleTypes.py  RequiredTypes.py  UnitGroupTypes.py  UnitTypes.py  VariableTypes.py
gpddatabase/data_objects/: DataObject.py  DataObjectCorrelation.py  DataObjectCorrelationMatrix.py  DataObjectData.py  DataObjectDataPoint.py  DataObjectUUID.py  (+8 more)
test/: schema_data_types.json  schema_datafile.json  schema_observable_types.json  schema_unit_group_types.json  test_pylint.sh  test_schema.sh
(+10 files in other folders)
